...
                        android:src="@drawable/profile" />
                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>

            <!-- Name (Bold, Larger) -->
            <TextView
                android:id="@+id/profile_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/prompt_regular"
                android:text="User Name"
                android:textColor="#101114"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/profile_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cv_photo_wrapper"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <!-- Email -->
...
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/prompt_regular"
                android:text="user@email.com"
                android:textColor="#757575"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/profile_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/profile_name"
                app:layout_constraintTop_toBottomOf="@+id/profile_name" />

            <!-- Password -->
            <TextView
...
